--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body{
-    /*background-color: #252525;
-    color:azure;*/
+    background-color: #2e2e2e;
+    color:azure;
 }
 .jumbotron{
-    background-color: #d11212;
+    background-color: #5a1212;
 }
 
 #contArea h2{
